新增能量转化系统（等价交换）：物品能量相互转化、管理员能量管理、REST API双鉴权、实验性开关